crates/barista-cli/tests/snapshots/output_shapes_complete__error_envelope_human.snap
---
source: crates/barista-cli/tests/output_shapes_complete.rs
expression: stderr.as_string()
---
error: barista verify failed: BAR-DEPLOY-AUTH-MISSING: no credentials for server `central`
