crates/barista-cli/tests/snapshots/output_shapes_complete__error_envelope_json_compact.snap
---
source: crates/barista-cli/tests/output_shapes_complete.rs
expression: body
---
{"command":"error","message":"barista verify failed: BAR-DEPLOY-AUTH-MISSING: no credentials for server `central`"}
